# internal/app/handlers/user_handler.go
@@ -1,14 +1,13 @@
 package handler
 
 import (
-	"encoding/json"
 	"fmt"
 	"io"
 	"net/http"
 	"time"
 
 	service "github.com/GbSouza15/sistemaEstoque/internal/app/services"
-	"github.com/GbSouza15/sistemaEstoque/pkg/token"
+	"github.com/GbSouza15/sistemaEstoque/pkg/utils"
 	"github.com/gorilla/mux"
 )
 
@@ -34,8 +33,7 @@ func (us *UserHandler) RegisterUser(w http.ResponseWriter, r *http.Request) {
 
 	body, err := io.ReadAll(r.Body)
 	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		w.Write([]byte("Error reading body"))
+		utils.WriteResponse("Error reading body", w, http.StatusInternalServerError)
 		fmt.Println(err.Error())
 		return
 	}
@@ -43,14 +41,12 @@ func (us *UserHandler) RegisterUser(w http.ResponseWriter, r *http.Request) {
 	defer r.Body.Close()
 
 	if err := us.service.RegisterUser(body); err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		w.Write([]byte("Error registering user"))
+		utils.WriteResponse("Error registering user", w, http.StatusBadRequest)
 		fmt.Println(err.Error())
 		return
 	}
 
-	w.WriteHeader(http.StatusCreated)
-	w.Write([]byte("User registered successfully"))
+	utils.WriteResponse("User registered successfully", w, http.StatusCreated)
 }
 
 // @Summary Login do usuário
@@ -62,12 +58,11 @@ func (us *UserHandler) RegisterUser(w http.ResponseWriter, r *http.Request) {
 // @Success 200 {string} string "User logged in successfully"
 // @Failure 400 {string} string "Bad Request"
 // @Failure 500 {string} string "Internal Server Error"
-// @Router /company/login/user [post]
+// @Router /company/user/login [post]
 func (us *UserHandler) LoginUser(w http.ResponseWriter, r *http.Request) {
 	body, err := io.ReadAll(r.Body)
 	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		w.Write([]byte("Error reading body"))
+		utils.WriteResponse("Error reading body", w, http.StatusInternalServerError)
 		fmt.Println(err.Error())
 		return
 	}
@@ -76,8 +71,7 @@ func (us *UserHandler) LoginUser(w http.ResponseWriter, r *http.Request) {
 
 	tokenString, err := us.service.LoginUser(body)
 	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		w.Write([]byte("Error logging in user"))
+		utils.WriteResponse("Error logging in user", w, http.StatusBadRequest)
 		fmt.Println(err.Error())
 		return
 	}
@@ -89,61 +83,7 @@ func (us *UserHandler) LoginUser(w http.ResponseWriter, r *http.Request) {
 		Path:    "/company",
 	})
 
-	w.WriteHeader(http.StatusOK)
-	w.Write([]byte("User logged in successfully"))
-}
-
-// @Summary Pegar informações da empresa
-// @Description Pegar informações da empresa baseado no ID da empresa presente no token
-// @Tags User
-// @Accept json
-// @Produce json
-// @Success 200 {object} models.Company "Company information"
-// @Failure 400 {string} string "Bad Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /company/user [get]
-func (us *UserHandler) GetCompanyInfos(w http.ResponseWriter, r *http.Request) {
-	c, err := r.Cookie("token")
-	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		w.Write([]byte("Error getting cookie"))
-		fmt.Println(err.Error())
-		return
-	}
-
-	if c == nil {
-		w.WriteHeader(http.StatusBadRequest)
-		w.Write([]byte("Token cookie not present"))
-		return
-	}
-
-	companyId, err := token.ParseToken(c.Value)
-	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		w.Write([]byte("Error parsing token"))
-		fmt.Println(err.Error())
-		return
-	}
-
-	company, err := us.service.GetCompanyInfos(companyId)
-	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		w.Write([]byte("Error getting company infos"))
-		fmt.Println(err.Error())
-		return
-	}
-
-	reponseJson, err := json.Marshal(company)
-	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		w.Write([]byte("Error parsing json"))
-		fmt.Println(err.Error())
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusOK)
-	w.Write(reponseJson)
+	utils.WriteResponse("User logged in successfully", w, http.StatusOK)
 }
 
 // @Summary Deletar usuário
@@ -161,12 +101,10 @@ func (us *UserHandler) DeleteUser(w http.ResponseWriter, r *http.Request) {
 	userId := vars["userId"]
 
 	if err := us.service.DeleteUser(userId); err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		w.Write([]byte("Error deleting user"))
+		utils.WriteResponse("Error deleting user", w, http.StatusBadRequest)
 		fmt.Println(err.Error())
 		return
 	}
 
-	w.WriteHeader(http.StatusOK)
-	w.Write([]byte("User deleted successfully"))
+	utils.WriteResponse("User deleted successfully", w, http.StatusOK)
 }
