# internal/app/models/supplier.go
@@ -9,3 +9,10 @@ type Supplier struct {
 	Phone     string    `json:"phone"`
 	CompanyId uuid.UUID `json:"company_id"`
 }
+
+type SupplierUpdate struct {
+	Id    uuid.UUID `json:"id"`
+	Name  *string   `json:"name"`
+	Email *string   `json:"email"`
+	Phone *string   `json:"phone"`
+}
