# internal/app/routers/company_router.go
@@ -7,6 +7,7 @@ import (
 	handler "github.com/GbSouza15/sistemaEstoque/internal/app/handlers"
 	repository "github.com/GbSouza15/sistemaEstoque/internal/app/repositories"
 	service "github.com/GbSouza15/sistemaEstoque/internal/app/services"
+	"github.com/GbSouza15/sistemaEstoque/pkg/middleware"
 	"github.com/gorilla/mux"
 )
 
@@ -16,6 +17,7 @@ func CompanyRoutes(db *sql.DB, r *mux.Router) error {
 	companyHandler := handler.NewCompanyHandler(companyService)
 
 	r.HandleFunc("/company/register", companyHandler.RegisterCompany).Methods(http.MethodPost)
+	r.HandleFunc("/company/info", middleware.Middleware(companyHandler.GetCompanyInfos)).Methods(http.MethodGet)
 
 	return nil
 }
